Fixing the icons taking up the entire heading row in the project cards on Safari(not chrome).

--- a/styles/cards.css
+++ b/styles/cards.css
@@ -43,6 +43,7 @@
 h2 > img
 {
   max-height: 2rem;
+  max-width: 30px;
   margin-right: 1rem;
   display: inline;
 }
